# extractText

./: LICENSE  README.md  extractText.py  pyproject.toml  setup.py
src/text_extractor/: __init__.py  extractText.py
tests/: import pytest.py  test_docx_extraction.py  test_epub_extraction.py  test_pdf_extraction.py  test_text_extraction.py
tests/test_files/: docx_test.docx  epub_test.epub
